<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_centerVertical="true"
                android:background="@drawable/rounded_border_16"
                android:backgroundTint="@color/white"
                android:padding="@dimen/_12sdp"
                android:src="@drawable/ic_back_arrow" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bg_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:scaleType="fitXY"
            android:src="@drawable/white_bg"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_62sdp"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_20sdp">

                <TextView
                    android:id="@+id/login_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:fontFamily="@font/librecaslo_font"
                    android:text="@string/register_new_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_19sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_slogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_txt"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/register_slog"
                    android:textColor="@color/darker_gray"
                    android:textSize="@dimen/_12sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_logo"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/ic_user_placeholder"
                        app:civ_border_color="#FF000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_toRightOf="@+id/profile"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/upload_profile_photo"
                        android:textColor="@color/darker_gray"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/organization_name"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_org_name"
                        style="@style/Edittext_11"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:paddingHorizontal="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/contact_person_name"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_contact_name"
                        style="@style/Edittext_11"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:paddingHorizontal="@dimen/_10sdp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/contact_number"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_mobile"
                        style="@style/Edittext_11"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/email"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_email"
                        style="@style/Edittext_11"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/password"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:paddingHorizontal="@dimen/_10sdp"
                        style="@style/Edittext_11"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/description"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_description"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionNext"
                        style="@style/Edittext_11"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_10sdp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/address"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:imeOptions="actionNext"
                        style="@style/Edittext_11"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/city"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_city"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        style="@style/Edittext_11"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Edt_box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_slogan"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/state"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/black">

                    <com.tm109.foodconnect.helper.CustomEdittext
                        android:id="@+id/edt_state"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        style="@style/Edittext_11"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/btn_submit"
                    android:outlineSpotShadowColor="@color/white"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/bottom_img"
            android:layout_width="@dimen/_205sdp"
            android:layout_height="@dimen/_195sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/end_design" />

    </RelativeLayout>

</RelativeLayout>