<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            >

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:src="@drawable/ic_logout"
                app:tint="@color/black" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp">

            <com.tm109.foodconnect.helper.CustomTextViewBold
                style="@style/black_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/are_you_sure" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp">

            <com.tm109.foodconnect.helper.CustomButton
                android:id="@+id/btn_dialog_no"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="1.0"
                android:background="@drawable/btn_trans_8"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

            <com.tm109.foodconnect.helper.CustomButton
                android:id="@+id/btn_dialog_yes"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_2sdp"
                android:background="@drawable/btn_rounded_primary"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>